--- a/package.json
+++ b/package.json
@@ -14,8 +14,8 @@
     "lint": "eslint njord"
   },
   "dependencies": {
-    "@octokit/rest": "^21.0.2",
-    "dayjs": "^1.11.13"
+    "dayjs": "^1.11.13",
+    "fetch-jsonp": "^1.3.0"
   },
   "devDependencies": {
     "@sveltejs/adapter-static": "^3.0.5",
