add: tailwindcss to ignore section

--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -5,7 +5,10 @@ updates:
   schedule:
     interval: "weekly"
   open-pull-requests-limit: 10
-  groups:
-    all:
-      patterns:
-        - "*"
+  ignore:
+    - dependency-name: tailwindcss
+      versions:
+        - '>=4'
+    - dependency-name: tailwind-merge
+      versions:
+        - '>=3'
